# Objective-Cuda

./: .gitignore  CMakeLists.txt  LICENSE  README
examples/: CMakeLists.txt
examples/matrix_transposition/: CMakeLists.txt  demo.cpp  enumerator.py  transpose.cpp  transpose.cu  transpose.h
include/: objective_cuda.h  objective_cuda.h.orig
objective_cuda/: CMakeLists.txt
src/: objective_cuda.cpp.orig
